--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ cycler==0.11.0
 dataclasses-json==0.5.9
 decorator==5.1.1
 discord==2.3.2
-discord.py==2.3.2
+discord.py
 distlib==0.3.6
 docopt==0.6.2
 docx==0.2.4
