--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ docopt==0.6.2
 docx==0.2.4
 et-xmlfile==1.1.0
 filelock==3.12.2
-Flask==2.3.3
+Flask
 flatbuffers==23.5.26
 fonttools==4.40.0
 frozenlist==1.3.3
