--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ et-xmlfile==1.1.0
 filelock==3.12.2
 Flask
 flatbuffers==23.5.26
-fonttools==4.40.0
+fonttools
 frozenlist==1.3.3
 fsspec==2023.6.0
 gast==0.4.0
