--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ importlib-metadata==6.7.0
 inflection==0.5.1
 iniconfig==2.0.0
 itsdangerous==2.1.2
-jax==0.4.13
+jax
 Jinja2==3.1.2
 joblib==1.3.1
 jsonschema==4.17.3
