--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ jax
 Jinja2==3.1.2
 joblib==1.3.1
 jsonschema==4.17.3
-keras==2.12.0
+keras
 kiwisolver==1.4.4
 langchain==0.0.221
 langchainplus-sdk==0.0.19
