--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ joblib==1.3.1
 jsonschema==4.17.3
 keras
 kiwisolver==1.4.4
-langchain==0.0.221
+langchain
 langchainplus-sdk==0.0.19
 libclang==16.0.0
 lxml==4.9.2
