--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ Markdown==3.4.3
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
-matplotlib==3.7.1
+matplotlib
 mdurl==0.1.2
 ml-dtypes==0.2.0
 mpmath==1.3.0
