--- a/requirements.txt
+++ b/requirements.txt
@@ -85,18 +85,17 @@ ml-dtypes==0.2.0
 mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
-networkx==3.1
-nltk==3.8.1
-numexpr==2.8.4
-numpy==1.23.5
-oauthlib==3.2.2
-openai==0.27.8
-openapi==1.1.0
-openapi-schema-pydantic==1.2.4
+networkx
+nltk
+numexpr
+numpy
+oauthlib
+openai
+openapi
 openpyxl==3.1.2
 opt-einsum==3.3.0
 packaging==23.1
-pandas==2.0.2
+pandas
 patsy==0.5.3
 pdfminer.six==20221105
 pdfplumber==0.10.2
