--- a/requirements.txt
+++ b/requirements.txt
@@ -98,17 +98,17 @@ packaging==23.1
 pandas
 patsy==0.5.3
 pdfminer.six==20221105
-pdfplumber==0.10.2
-Pillow==9.5.0
-pipeline==0.1.0
-pipreqs==0.4.13
+pdfplumber
+Pillow
+pipeline
+pipreqs
 platformdirs==3.6.0
-plotly==5.15.0
+plotly
 plotly-express==0.4.1
 pluggy==1.2.0
-prompts==0.0.1
+prompts
 protobuf==3.20.3
-py==1.11.0
+py
 pyarrow==12.0.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
@@ -141,46 +141,17 @@ rfc3986==1.5.0
 rich==13.4.2
 rsa==4.9
 safetensors==0.3.1
-scipy==1.10.1
+scipy
 secure-smtplib==0.1.1
 six==1.16.0
-smmap==5.0.0
+smmap
 sniffio==1.3.0
 soupsieve==2.4.1
-SpeechRecognition==3.10.0
+SpeechRecognition
 SQLAlchemy==2.0.17
 statsmodels==0.14.0
 streamlit==1.25.0
 streamlit-chat==0.1.1
 streamlit-option-menu==0.3.6
 sympy==1.12
-tenacity==8.2.2
-tensorboard==2.12.3
-tensorboard-data-server==0.7.1
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-tokenizers==0.13.3
-toml==0.10.2
-toolz==0.12.0
-torch==2.0.1
-tornado==6.3.2
-tqdm==4.65.0
-transformers==4.30.2
-translator==0.0.9
-typing-inspect==0.9.0
-typing_extensions==4.6.3
-tzdata==2023.3
-tzlocal==4.3
-urllib3==1.26.16
-utils==1.0.1
-validators==0.20.0
-virtualenv==20.23.1
-watchdog==3.0.0
-Werkzeug==2.3.7
-wrapt==1.14.1
-XlsxWriter==3.1.2
-yarg==0.1.9
-yarl==1.9.2
-zipp==3.15.0
+
