--- a/requirements.txt
+++ b/requirements.txt
@@ -127,7 +127,7 @@ pytest-html==3.2.0
 pytest-metadata==3.0.0
 python-aalib==0.4
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv
 python-utils==3.7.0
 pyttsx3==2.90
 pytz==2023.3
