--- a/requirements.txt
+++ b/requirements.txt
@@ -128,14 +128,14 @@ pytest-metadata==3.0.0
 python-aalib==0.4
 python-dateutil==2.8.2
 python-dotenv
-python-utils==3.7.0
-pyttsx3==2.90
-pytz==2023.3
+python-utils
+pyttsx3
+pytz
 pytz-deprecation-shim==0.1.0.post0
 pywin32==306
 PyYAML==6.0
-regex==2023.6.3
-requests==2.31.0
+regex
+requests
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rich==13.4.2
