--- a/requirements.txt
+++ b/requirements.txt
@@ -148,8 +148,6 @@ sniffio==1.3.0
 soupsieve==2.4.1
 SpeechRecognition
 SQLAlchemy==2.0.17
-streamlit==1.25.0
-streamlit-chat==0.1.1
-streamlit-option-menu==0.3.6
+streamlit
 sympy==1.12
 
