--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ cryptography==41.0.3
 cycler==0.11.0
 dataclasses-json==0.5.9
 decorator==5.1.1
-discord==2.3.2
+discord
 discord.py
 distlib==0.3.6
 docopt==0.6.2
