--- a/requirements.txt
+++ b/requirements.txt
@@ -149,3 +149,35 @@ SpeechRecognition
 SQLAlchemy==2.0.17
 streamlit
 sympy
+
+run 
+tenacity
+tensorboard
+tensorboard-data-server==0.7.1
+tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+tokenizers
+toml==0.10.2
+toolz
+torch
+tornado
+tqdm==4.65.0
+transformers
+translator
+typing-inspect==0.9.0
+typing_extensions==4.6.3
+tzdata==2023.3
+tzlocal==4.3
+urllib3==1.26.16
+utils
+validators==0.20.0
+virtualenv
+watchdog==3.0.0
+Werkzeug==2.3.7
+wrapt==1.14.1
+XlsxWriter==3.1.2
+yarg
+yarl
+zipp
