--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ clipboard==0.0.4
 colorama==0.4.6
 comtypes==1.2.0
 coverage==7.2.7
+contourpy
 cryptography==41.0.3
 cycler==0.11.0
 dataclasses-json==0.5.9
@@ -169,6 +170,7 @@ urllib3==1.26.16
 utils
 validators==0.20.0
 virtualenv
+wheel 
 watchdog==3.0.0
 Werkzeug==2.3.7
 wrapt==1.14.1
